# rosa-python-client

./: .flake8  .release-it.json  README.md  pyproject.toml  pytest.ini  renovate.json  tox.ini
rosa/: cli.py  rosa_versions.py
rosa/tests/: conftest.py  test_parse_command.py  test_rosa_login.py
