[tool]
poetry = "1.0.123"

[tool.coverage.run]
omit = [ "rosa/tests/*" ]

[tool.coverage.report]
fail_under = 60
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

  [tool.ruff]
  preview = true
  line-length = 120
  fix = true
  output-format = "grouped"

    [tool.ruff.format]
    exclude = [ ".git", ".venv", ".mypy_cache", ".tox", "__pycache__" ]

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
